--- a/MyProject/package.json
+++ b/MyProject/package.json
@@ -1,11 +1,12 @@
 {
   "name": "dev-nodejs",
   "version": "1.0.0",
+  "type" : "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon ./src/index.js"
   },
   "author": "bseixeiro",
   "license": "ISC",
