--- a/AppliWebNode/package.json
+++ b/AppliWebNode/package.json
@@ -6,13 +6,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/index.js"
+    "start": "nodemon index.js"
   },
-  "author": "bseixeiro",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.18.3",
     "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "ejs": "^3.1.9",
+    "express": "^4.18.3"
   }
 }
