--- a/Shop/package.json
+++ b/Shop/package.json
@@ -12,8 +12,12 @@
   "license": "ISC",
   "devDependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.3",
+    "express": "^4.19.1",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "sql": "^0.78.0",
+    "sqlite3": "^5.1.7"
   }
 }
